--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nestmetric2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.1.0",
+    "node": "10.6.0"
+  },
   "dependencies": {
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
