--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "10.6.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react": "^16.4.1",
